--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -7,7 +7,30 @@
   </head>
 
   <body>
-    <h1>Hello World, we are Software Developers!</h1>
+    <nav id="nav-bar">
+      <a href="" class="nav-link"></a>
+      <a href="" class="nav-link"></a>
+      <a href="" class="nav-link"></a>
+    </nav>
+    <header id="header">
+      <div><img src="http" id="header-img" alt="">
+      </div>
+          </header>
+    <div id="video">
+      <video src=""></video>
+    </div>
+    <div id="form">
+      <form action="https://www.freecodecamp.com/email-submit">
+      </form>
+      <div id="email">
+        <input type="email" placeholder="text" name="email">
+      </div>
+      <div id="submit">
+        <input type="submit">
+      </div>
+    </div>
+   
+   
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
