--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -7,30 +7,28 @@
   </head>
 
   <body>
-    <nav id="nav-bar">
-      <a href="" class="nav-link"></a>
-      <a href="" class="nav-link"></a>
-      <a href="" class="nav-link"></a>
-    </nav>
     <header id="header">
-      <div><img src="http" id="header-img" alt="">
-      </div>
-          </header>
+      <nav id="nav-bar">
+        <img
+          id="header-img"
+          src="https://s3.amazonaws.com/freecodecamp/original_trombones.png"
+          alt="Logo image"
+        />
+        <a class="nav-link" href="#home">Home</a>
+        <a class="nav-link" href="#about">About</a>
+        <a class="nav-link" href="#contact">Contact Us</a>
+      </nav>
+    </header>
     <div id="video">
-      <video src=""></video>
+      <iframe id="vid" src="https://youtu.be/y8Yv4pnO7qc"></iframe>
     </div>
     <div id="form">
-      <form action="https://www.freecodecamp.com/email-submit">
+      <form id="form" action="https://www.freecodecamp.com/email-submit">
+      <input id="email" type="email" name="email" placeholder="pairgroup@gmail.com">
+      <input id="submit" type="submit" value="Submit" ></input>
       </form>
-      <div id="email">
-        <input type="email" placeholder="text" name="email">
-      </div>
-      <div id="submit">
-        <input type="submit">
-      </div>
     </div>
-   
-   
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
